--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Wasla" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Wasla" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryVariant">@color/white</item>
@@ -13,4 +13,10 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="tablayout_text_appearance" parent="TextAppearance.AppCompat.Medium">
+        <item name="fontFamily">@font/ubuntu_medium</item>
+        <item name="android:textSize">17sp</item>
+    </style>
+
 </resources>
