setup circule button and add new clickable effect with using [layout_constraintCircleRadius]

--- a/app/src/main/res/layout/activity_my_points.xml
+++ b/app/src/main/res/layout/activity_my_points.xml
@@ -113,6 +113,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:elevation="8dp"
+                android:clickable="true"
+                android:focusable="true"
+                app:layout_constraintCircleRadius="50dp"
                 android:src="@drawable/circule_white_background"
                 app:layout_constraintBottom_toBottomOf="@id/gray_iv"
                 app:layout_constraintEnd_toEndOf="@id/gray_iv"
@@ -140,6 +143,7 @@
             layout="@layout/card_item_layout"
             android:layout_width="wrap_content"
             android:layout_marginTop="30dp"
+            app:layout_constraintCircleRadius="20dp"
             android:layout_height="wrap_content"
             app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintStart_toStartOf="parent"
@@ -155,6 +159,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
+            app:layout_constraintCircleRadius="20dp"
             app:layout_constraintStart_toEndOf="@id/card_id1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/my_points_tl"
@@ -167,6 +172,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
+            app:layout_constraintCircleRadius="20dp"
             bind:cardname="@{@string/donates_name}"
             bind:cardimage="@{@drawable/ic_donate}"
             app:layout_constraintStart_toStartOf="parent"
