--- a/app/src/main/res/drawable/gray_background_rounded_rectangle.xml
+++ b/app/src/main/res/drawable/gray_background_rounded_rectangle.xml
@@ -1,5 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <corners android:radius="20dp"/>
-    <solid android:color="#f5f3f5"/>
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true">
+        <shape  android:shape="rectangle">
+
+            <corners android:radius="20dp"/>
+            <solid android:color="#E3E0E3"/>
+
+        </shape>
+
+    </item>
+
+    <item>
+        <shape  android:shape="rectangle">
+
+            <corners android:radius="20dp"/>
+            <solid android:color="#f5f3f5"/>
+
+        </shape>
+
+    </item>
+
+</selector>
