--- a/app/src/main/res/layout/card_item_layout.xml
+++ b/app/src/main/res/layout/card_item_layout.xml
@@ -18,35 +18,45 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/gray_background_rounded_rectangle"
-        android:foreground="?selectableItemBackground"
-        android:focusable="true"
-        android:clickable="true"
-        android:padding="20dp">
+        >
 
-        <ImageView
-            android:id="@+id/card_im"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@{cardimage}"
-            app:layout_constraintBottom_toTopOf="@id/card_tv"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/card_tv"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:fontFamily="@font/ubuntu_medium"
-            android:text="@{cardname}"
-            android:textColor="#CAC7C9"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:clickable="true"
+            android:background="@drawable/gray_background_rounded_rectangle"
+            android:focusable="true"
+            android:padding="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/card_im" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintCircleRadius="120dp">
 
+            <ImageView
+                android:id="@+id/card_im"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@{cardimage}"
+                app:layout_constraintBottom_toTopOf="@id/card_tv"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/card_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/ubuntu_medium"
+                android:text="@{cardname}"
+                android:textColor="#CAC7C9"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/card_im" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
