--- a/app/src/main/res/layout/activity_my_points_with_motion_layout.xml
+++ b/app/src/main/res/layout/activity_my_points_with_motion_layout.xml
@@ -10,12 +10,14 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="false"
         tools:context=".MyPointsWithMotionLayoutActivity">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
             app:elevation="0dp"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:layout_height="wrap_content">
 
             <include layout="@layout/header_layout" android:id="@+id/header_title" />
@@ -27,9 +29,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             layout="@layout/body_layout"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             app:layout_anchor="@id/app_bar"
-            app:layout_anchorGravity="bottom"
-            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>
+            app:layout_anchorGravity="bottom"/>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
