--- a/app/src/main/res/layout/body_layout.xml
+++ b/app/src/main/res/layout/body_layout.xml
@@ -6,66 +6,140 @@
         <import type="com.morse.wasla.R" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:bind="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/my_points_tl"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tabIndicatorColor="#e9d089"
-            app:tabIndicatorFullWidth="true"
-            app:tabIndicatorHeight="2dp"
-            app:tabMode="fixed"
-            app:tabSelectedTextColor="#000000"
-            app:tabTextAppearance="@style/tablayout_text_appearance"
-            app:tabTextColor="#656364" />
-
-        <include
-            android:id="@+id/card_id1"
-            bind:cardimage="@{@drawable/ic_dollars}"
-            bind:cardname="@{@string/dollars_name}"
-            layout="@layout/card_item_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            app:layout_constraintCircleRadius="20dp"
-            app:layout_constraintEnd_toStartOf="@id/card_id2"
-            app:layout_constraintHorizontal_chainStyle="spread"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/my_points_tl" />
-
-        <include
-            android:id="@+id/card_id2"
-            bind:cardimage="@{@drawable/ic_send_mail}"
-            bind:cardname="@{@string/send_name}"
-            layout="@layout/card_item_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            app:layout_constraintCircleRadius="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/card_id1"
-            app:layout_constraintTop_toBottomOf="@id/my_points_tl" />
-
-        <include
-            android:id="@+id/card_id3"
-            bind:cardimage="@{@drawable/ic_donate}"
-            bind:cardname="@{@string/donates_name}"
-            layout="@layout/card_item_layout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            app:layout_constraintCircleRadius="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/card_id2" />
+            android:layout_height="wrap_content">
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <include
+                android:id="@+id/card_id1"
+                layout="@layout/card_item_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                app:layout_constraintCircleRadius="20dp"
+                app:layout_constraintEnd_toStartOf="@id/card_id2"
+                app:layout_constraintHorizontal_chainStyle="spread"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                bind:cardimage="@{@drawable/ic_dollars}"
+                bind:cardname="@{@string/dollars_name}" />
+
+            <include
+                android:id="@+id/card_id2"
+                layout="@layout/card_item_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                app:layout_constraintCircleRadius="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/card_id1"
+                app:layout_constraintTop_toTopOf="parent"
+                bind:cardimage="@{@drawable/ic_send_mail}"
+                bind:cardname="@{@string/send_name}" />
+
+            <include
+                android:id="@+id/card_id3"
+                layout="@layout/card_item_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                app:layout_constraintCircleRadius="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/card_id2"
+                bind:cardimage="@{@drawable/ic_donate}"
+                bind:cardname="@{@string/donates_name}" />
+
+
+            <include
+                android:id="@+id/card_id4"
+                layout="@layout/card_item_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                app:layout_constraintCircleRadius="20dp"
+                app:layout_constraintEnd_toStartOf="@id/card_id2"
+                app:layout_constraintHorizontal_chainStyle="spread"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/card_id3"
+                bind:cardimage="@{@drawable/ic_dollars}"
+                bind:cardname="@{@string/dollars_name}" />
+
+            <include
+                android:id="@+id/card_id5"
+                layout="@layout/card_item_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                app:layout_constraintCircleRadius="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/card_id1"
+                app:layout_constraintTop_toBottomOf="@id/card_id3"
+                bind:cardimage="@{@drawable/ic_send_mail}"
+                bind:cardname="@{@string/send_name}" />
+
+            <include
+                android:id="@+id/card_id6"
+                layout="@layout/card_item_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                app:layout_constraintCircleRadius="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/card_id4"
+                bind:cardimage="@{@drawable/ic_donate}"
+                bind:cardname="@{@string/donates_name}" />
+
+            <include
+                android:id="@+id/card_id7"
+                layout="@layout/card_item_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                app:layout_constraintCircleRadius="20dp"
+                app:layout_constraintEnd_toStartOf="@id/card_id2"
+                app:layout_constraintHorizontal_chainStyle="spread"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/card_id6"
+                bind:cardimage="@{@drawable/ic_dollars}"
+                bind:cardname="@{@string/dollars_name}" />
+
+            <include
+                android:id="@+id/card_id8"
+                layout="@layout/card_item_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                app:layout_constraintCircleRadius="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/card_id1"
+                app:layout_constraintTop_toBottomOf="@id/card_id6"
+                bind:cardimage="@{@drawable/ic_send_mail}"
+                bind:cardname="@{@string/send_name}" />
+
+            <include
+                android:id="@+id/card_id9"
+                layout="@layout/card_item_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                app:layout_constraintCircleRadius="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/card_id7"
+                bind:cardimage="@{@drawable/ic_donate}"
+                bind:cardname="@{@string/donates_name}" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
 </layout>
