--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.morse.wasla.CollapsibleToolbar xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/headerRoot"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:applyMotionScene="true"
+    android:fitsSystemWindows="false"
+    app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed"
     app:layoutDescription="@xml/header_layout_scene">
 
     <ImageView
@@ -14,6 +16,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
+
         android:src="@drawable/ic_baseline_keyboard_backspace_24"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -124,4 +127,19 @@
         app:layout_constraintStart_toStartOf="@id/gray_iv"
         app:layout_constraintTop_toTopOf="@id/gray_iv" />
 
-</androidx.constraintlayout.motion.widget.MotionLayout>
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/my_points_tl"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/your_points_wallet"
+        app:tabIndicatorColor="#e9d089"
+        app:tabIndicatorFullWidth="true"
+        app:tabIndicatorHeight="2dp"
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="#000000"
+        app:tabTextAppearance="@style/tablayout_text_appearance"
+        app:tabTextColor="#656364" />
+
+</com.morse.wasla.CollapsibleToolbar>
