--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/headerRoot"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     app:applyMotionScene="true"
     android:fitsSystemWindows="false"
     app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed"
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        app:layout_collapseMode="pin"
         android:layout_marginBottom="10dp"
 
         android:src="@drawable/ic_baseline_keyboard_backspace_24"
@@ -28,6 +29,7 @@
         android:layout_marginStart="15dp"
         android:fontFamily="@font/ubuntu_regular"
         android:text="My Points"
+        app:layout_collapseMode="pin"
         android:textColor="@color/black"
         android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="@id/back_bt"
