add constrain for motionlayout header it self #1

--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -7,6 +7,7 @@
     app:applyMotionScene="true"
     app:motionDebug="SHOW_ALL"
     app:showPaths="true"
+    android:minHeight="50dp"
     android:fitsSystemWindows="false"
     app:layout_scrollFlags="scroll"
     app:layoutDescription="@xml/header_layout_scene">
@@ -54,6 +55,7 @@
         android:text="Your Points"
         android:textColor="@color/black"
         android:textSize="17sp"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@id/coin_iv"
         app:layout_constraintStart_toStartOf="@id/coin_iv"
         android:layout_marginBottom="20dp"
@@ -78,7 +80,6 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/ubuntu_bold"
         android:maxLength="5"
-        android:singleLine="true"
         app:layout_constraintHorizontal_bias="1"
         android:text="2,510"
         app:layout_constraintStart_toEndOf="@id/coin_iv"
@@ -95,6 +96,7 @@
         android:fontFamily="@font/ubuntu_medium"
         android:text="pts"
         android:textAllCaps="true"
+        android:textColor="#123"
         android:lines="1"
         android:ellipsize="end"
         app:layout_constraintEnd_toStartOf="@id/gray_iv"
