--- a/app/src/main/res/xml/header_layout_scene.xml
+++ b/app/src/main/res/xml/header_layout_scene.xml
@@ -37,6 +37,7 @@
             android:layout_height="200dp"
             android:layout_marginHorizontal="15dp"
             android:layout_marginTop="25dp"
+            android:visibility="visible"
             android:background="@drawable/gray_background_rounded"
             app:layout_constraintTop_toBottomOf="@id/back_bt" />
         <Constraint
@@ -69,7 +70,6 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/ubuntu_bold"
             android:maxLength="5"
-            android:singleLine="true"
             app:layout_constraintHorizontal_bias="1"
             android:text="2,510"
             app:layout_constraintStart_toEndOf="@id/coin_iv"
@@ -97,6 +97,7 @@
             android:text="pts"
             android:textAllCaps="true"
             android:lines="1"
+            android:textColor="#123"
             android:ellipsize="end"
             app:layout_constraintEnd_toStartOf="@id/gray_iv"
             android:textSize="16sp"
@@ -123,6 +124,7 @@
             android:layout_height="50dp"
             android:layout_marginHorizontal="15dp"
             android:layout_marginStart="100dp"
+            android:visibility="gone"
             android:background="@drawable/gray_background_rounded"
             app:layout_constraintBottom_toBottomOf="@id/back_bt"
             app:layout_constraintEnd_toEndOf="parent"
@@ -159,7 +161,6 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/ubuntu_bold"
             android:maxLength="5"
-            android:singleLine="true"
             android:text="2,510"
             app:layout_constraintStart_toEndOf="@id/coin_iv"
             app:layout_constraintEnd_toStartOf="@id/gray_iv"
@@ -185,6 +186,7 @@
             android:text="pts"
             android:textAllCaps="true"
             android:lines="1"
+            android:textColor="#123"
             android:ellipsize="end"
             app:layout_constraintEnd_toStartOf="@id/gray_iv"
             android:textSize="16sp"
