--- a/app/src/main/res/layout/activity_my_points_with_motion_layout.xml
+++ b/app/src/main/res/layout/activity_my_points_with_motion_layout.xml
@@ -2,7 +2,6 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
         <import type="com.morse.wasla.R" />
     </data>
 
@@ -10,28 +9,32 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="false"
         tools:context=".MyPointsWithMotionLayoutActivity">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
-            app:elevation="0dp"
+            android:layout_height="340dp"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            android:layout_height="wrap_content">
+            app:elevation="0dp">
 
-            <include layout="@layout/header_layout" android:id="@+id/header_title" />
+            <androidx.appcompat.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="?actionBarSize"
+                app:title="Your Wallet"
+                app:titleTextColor="@color/black"
+                app:navigationIcon="@drawable/ic_baseline_keyboard_backspace_24"
+                />
+
+            <include
+                android:id="@+id/header_title"
+                layout="@layout/header_layout" />
 
         </com.google.android.material.appbar.AppBarLayout>
 
         <include
             android:id="@+id/bodyLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            layout="@layout/body_layout"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            app:layout_anchor="@id/app_bar"
-            app:layout_anchorGravity="bottom"/>
+            layout="@layout/body_layout" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
