--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -4,46 +4,19 @@
     android:id="@+id/headerRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:applyMotionScene="true"
-    android:fitsSystemWindows="false"
+    android:minHeight="120dp"
+    app:motionProgress="0"
     app:layout_scrollFlags="scroll|enterAlways|snap|exitUntilCollapsed"
     app:layoutDescription="@xml/header_layout_scene">
 
-    <ImageView
-        android:id="@+id/back_bt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        app:layout_collapseMode="pin"
-        android:layout_marginBottom="10dp"
-
-        android:src="@drawable/ic_baseline_keyboard_backspace_24"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/title_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:fontFamily="@font/ubuntu_regular"
-        android:text="My Points"
-        app:layout_collapseMode="pin"
-        android:textColor="@color/black"
-        android:textSize="15sp"
-        app:layout_constraintBottom_toBottomOf="@id/back_bt"
-        app:layout_constraintStart_toEndOf="@id/back_bt"
-        app:layout_constraintTop_toTopOf="@id/back_bt" />
 
     <ImageView
         android:id="@+id/your_points_wallet"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="25dp"
         android:src="@drawable/gray_background_rounded"
-        app:layout_constraintTop_toBottomOf="@id/back_bt" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/your_points_tv"
@@ -73,12 +46,11 @@
 
     <TextView
         android:id="@+id/total_points_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:fontFamily="@font/ubuntu_bold"
-        android:maxLength="5"
         android:singleLine="true"
-        app:layout_constraintHorizontal_bias="1"
+        app:layout_constraintHorizontal_bias="0.1"
         android:text="2,510"
         app:layout_constraintStart_toEndOf="@id/coin_iv"
         app:layout_constraintEnd_toStartOf="@id/gray_iv"
@@ -95,9 +67,11 @@
         android:text="pts"
         android:textAllCaps="true"
         android:lines="1"
+        android:layout_marginEnd="20dp"
         android:ellipsize="end"
         app:layout_constraintEnd_toStartOf="@id/gray_iv"
         android:textSize="16sp"
+        android:textColor="@color/black"
         app:layout_constraintTop_toBottomOf="@id/total_points_tv"
         app:layout_constraintStart_toEndOf="@id/total_points_tv"/>
 
@@ -133,7 +107,7 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/my_points_tl"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/your_points_wallet"
         app:tabIndicatorColor="#e9d089"
