--- a/app/src/main/res/xml/header_layout_scene.xml
+++ b/app/src/main/res/xml/header_layout_scene.xml
@@ -25,9 +25,22 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginHorizontal="15dp"
-            android:layout_marginTop="25dp"
-            android:background="@drawable/gray_background_rounded"
-            app:layout_constraintTop_toBottomOf="@id/back_bt" />
+            android:src="@drawable/gray_background_rounded"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_editor_absoluteX="0dp" />
+
+        <Constraint
+            android:id="@+id/your_points_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/ubuntu_medium"
+            android:text="Your Points"
+            android:textColor="@color/black"
+            android:textSize="17sp"
+            app:layout_constraintBottom_toTopOf="@id/coin_iv"
+            app:layout_constraintStart_toStartOf="@id/coin_iv"
+            android:layout_marginBottom="20dp"/>
+
         <Constraint
             android:id="@+id/gray_iv"
             android:layout_width="100dp"
@@ -52,14 +65,14 @@
             app:layout_constraintEnd_toEndOf="@id/gray_iv"
             app:layout_constraintStart_toStartOf="@id/gray_iv"
             app:layout_constraintTop_toTopOf="@id/gray_iv" />
+
         <Constraint
             android:id="@+id/total_points_tv"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/ubuntu_bold"
-            android:maxLength="5"
             android:singleLine="true"
-            app:layout_constraintHorizontal_bias="1"
+            app:layout_constraintHorizontal_bias="0.1"
             android:text="2,510"
             app:layout_constraintStart_toEndOf="@id/coin_iv"
             app:layout_constraintEnd_toStartOf="@id/gray_iv"
@@ -67,6 +80,7 @@
             app:layout_constraintBottom_toBottomOf="@id/coin_iv"
             android:textColor="@color/black"
             android:textSize="35sp"/>
+
         <Constraint
             android:id="@+id/coin_iv"
             android:layout_width="30dp"
@@ -87,8 +101,10 @@
             android:textAllCaps="true"
             android:lines="1"
             android:ellipsize="end"
+            android:layout_marginEnd="20dp"
             app:layout_constraintEnd_toStartOf="@id/gray_iv"
             android:textSize="16sp"
+            android:textColor="@color/black"
             app:layout_constraintTop_toBottomOf="@id/total_points_tv"
             app:layout_constraintStart_toEndOf="@id/total_points_tv"/>
 
@@ -98,15 +114,26 @@
 
         <Constraint
             android:id="@+id/your_points_wallet"
-            android:layout_width="0dp"
-            android:layout_height="50dp"
+            android:layout_width="220dp"
+            android:layout_height="60dp"
             android:layout_marginHorizontal="15dp"
             android:layout_marginStart="100dp"
+            android:layout_marginTop="30dp"
             android:background="@drawable/gray_background_rounded"
-            app:layout_constraintBottom_toBottomOf="@id/back_bt"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/title_tv"
-            app:layout_constraintTop_toTopOf="@id/back_bt" />
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Constraint
+            android:id="@+id/your_points_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/ubuntu_medium"
+            android:text="Your Points"
+            android:textColor="@color/black"
+            android:textSize="17sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
         <Constraint
             android:id="@+id/gray_iv"
             android:layout_width="30dp"
@@ -134,10 +161,9 @@
             app:layout_constraintTop_toTopOf="@id/gray_iv" />
         <Constraint
             android:id="@+id/total_points_tv"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/ubuntu_bold"
-            android:maxLength="5"
             android:singleLine="true"
             android:text="2,510"
             app:layout_constraintStart_toEndOf="@id/coin_iv"
@@ -164,6 +190,7 @@
             android:text="pts"
             android:textAllCaps="true"
             android:lines="1"
+            android:textColor="@color/black"
             android:ellipsize="end"
             app:layout_constraintEnd_toStartOf="@id/gray_iv"
             android:textSize="16sp"
